# Quiz_System

./: .example_env  .gitignore  README.md  check_env.py  config.py  note.md  pyproject.toml  run.py
app/: __init__.py
app/api/: routes.py
app/config/: settings.py
app/database/: db.py
app/models/: qa_pair.py  user.py
app/services/: auth_service.py  file_service.py  llm_service.py  quiz_service.py
app/templates/: base.html  index.html
app/templates/auth/: login.html  register.html
app/utils/: decorators.py  logger.py
docs/: setup_guide.md
scripts/: add_test_data.py  init_db.py  run.sh  test_db.py  test_db_connection.py  test_jiutian_api.py  test_jiutian_req.py  九天_api_key.py
